Finishing touches on salamander page

--- a/source/projects/salamander-watch/index.html.haml
+++ b/source/projects/salamander-watch/index.html.haml
@@ -1,27 +1,23 @@
 .container
   .row
+    .col-md-12
+      %img{:src => "/images/salamander-header.jpg", :alt => "Spotted Salamader header image", :class => "img-rounded img-responsive"}/
     .col-lg-12
-      .panel.panel-success
-        .panel-heading
-          %h3.panel-title Salamander Watch project background
-        .panel-body
-          %p Salamander Watch is a collaboration between Hampshire College and The Hitchcock Center for the Environment in Amherst, MA. This project involves both the “Big Night” (counting of spotted salamanders during the early spring mating migration) and the Egg Mass Count (which happens 3-4 weeks after the Big Night, and is used to get a better estimate of the breeding success and overall health of the population).
+      %h3 Salamander Watch
+      %p Salamander Watch is a collaboration between Hampshire College and The Hitchcock Center for the Environment in Amherst, MA. This project involves both the “Big Night” (counting of spotted salamanders during the early spring mating migration) and the Egg Mass Count (which happens 3-4 weeks after the Big Night, and is used to get a better estimate of the breeding success and overall health of the population).
   .row
-    .col-lg-12.top-buffer
-      .panel.panel-success
-        .panel-heading
-          %h3.panel-title Spotted Salamander Basics
-        .panel-body
-          .col-md-8
-            %p
-              Adult spotted salamanders are 15-25 cm in total length, and females tend to be larger than males. Compared to other salamanders, the body is stout with a broadly rounded snout. The sides of the head are often swollen at the back of the jaw. The legs are large and strong with four to five toes. (Petranka, 1998) When they leave their ponds, spotted salamanders are black, dark brown, or dark grey on their backs...
-              %a{:href => "http://en.wikipedia.org/wiki/Spotted_salamander"} read more
-          .col-md-4
-            %a.thumbnail
-              %img.img-rounded.img-responsive{:alt => "A spotted salamander", :src => "/images/spotted-basics.png"}/
+    .col-lg-12
+      %h3 Spotted Salamander Basics
+      .col-md-10
+        %p Adult spotted salamanders are 15-25 cm in total length, and females tend to be larger than males. Compared to other salamanders, the body is stout with a broadly rounded snout. The sides of the head are often swollen at the back of the jaw. The legs are large and strong with four to five toes. (Petranka, 1998) When they leave their ponds, spotted salamanders are black, dark brown, or dark grey on their backs...
+        %a{:href => "http://en.wikipedia.org/wiki/Spotted_salamander"} read more
+      .col-md-2
+        %a.thumbnail
+          %img.img-rounded.img-responsive.hidden-sm.hidden-xs{:alt => "A spotted salamander", :src => "/images/spotted-basics.png"}/
   .row
     .col-lg-12.col-md-12.col-sm-12
       %h3 Environmental issues affecting the spotted salamander
+      %h5 Click for more info
     .col-lg-3.col-md-3.col-sm-3
       %a.thumbnail{"data-target" => "#climate-change-icon", "data-toggle" => "modal", :href => "#"}
         %img.small-thumb{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
@@ -34,16 +30,23 @@
     .col-lg-3.col-md-3.col-sm-3
       %a.thumbnail{"data-target" => "#invasive-icon", "data-toggle" => "modal", :href => "#"}
         %img.small-thumb{:alt => "Invasive Species Icon", :src => "/images/invasivespecies-icon.png"}/
-
+  .row
+    .col-md-12
+      %h3 Salamader Watch Background
+      %p Salamander Watch is a collaboration between Hampshire College and The Hitchcock Center for the Environment in Amherst, MA.  This project involves both the “Big Night” (counting of spotted salamanders during the early spring mating migration) and the Egg Mass Count (which happens 3-4 weeks after the Big Night, and is used to get a better estimate of the breeding success and overall health of the population).
   .row
     .col-sm-4
-      .thumbnail
-        %img.small-thumb{:src => "/images/register-for-excursion.png", :alt => "Launch an Investigation"}/
+      %a{:href => ""}
+        .thumbnail
+          %img.small-thumb{:src => "/images/register-for-excursion.png", :alt => "Launch an Investigation"}/
     .col-sm-4
-      .thumbnail
-        %img.small-thumb{:src => "/images/launch-invest.png", :alt => "Launch an Investigation"}/    
+      %a{:href => ""}
+        .thumbnail
+          %img.small-thumb{:src => "/images/launch-invest.png", :alt => "Launch an Investigation"}/    
     .col-sm-4
-      .thumbnail
-        %img.small-thumb{:src => "/images/explore-data.png", :alt => "Explore the Data Set"}/
+      %a{:href => ""}
+        .thumbnail
+          %img.small-thumb{:src => "/images/explore-data.png", :alt => "Explore the Data Set"}/
+
 
   = partial "layouts/modals/modals-salamander"
