Nav, homepage and salamander page

--- a/source/layouts/shared/nav.html.haml
+++ b/source/layouts/shared/nav.html.haml
@@ -20,7 +20,7 @@
           %li
             %a{:href => "/about/"} About PVCS
           %li
-            %a{:href => "#"}Sign Up/Log In
+            %a{:href => "###"}Sign Up/Log In
         %form.navbar-form
           .search.input-group.pull-right
             %input{:type => 'text', :class => 'form-control', :placeholder => 'Search PVCS'}
