--- a/source/projects/salamander-watch/index.html.haml
+++ b/source/projects/salamander-watch/index.html.haml
@@ -17,7 +17,7 @@
   .row
     .col-lg-12.col-md-12.col-sm-12
       %h3 Environmental issues affecting the spotted salamander
-      %h5 Click for more info
+      %p.text-muted Click for more info
     .col-lg-3.col-md-3.col-sm-3
       %a.thumbnail{"data-target" => "#climate-change-icon", "data-toggle" => "modal", :href => "#"}
         %img.small-thumb{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
