--- a/source/about/index.html.haml
+++ b/source/about/index.html.haml
@@ -61,6 +61,14 @@
 			.col-md-10
 				%h4 Hedieh Najafi
 				%p Hedieh is a researcher at the Encore lab and contributes to conceptualizing an integrated research component of the PVCS Collaboratory.
+		
+		.row
+			.col-md-2
+				.thumbnail
+					%img{:src => "/images/people/mike-tissenbaum.jpg", :alt => "Profile shot of Mike Tissenbaum", :class => 'img-circle img-responsive'}/
+			.col-md-10
+				%h4 Mike Tissembaum
+				%p Mike Tissenbaum is a PhD candidate in Curriculum Teaching and Learning (CTL) department at the Ontario Institute for Studies in Education (OISE)/The University of Toronto. Mike received my Master’s from the Faculty of Information (iSchool) at the University of Toronto and am also a graduate of their Knowledge Media Design Institute collaborative program.
 		.row
 			.col-md-2
 				.thumbnail
