adding optimizations for mobile

--- a/source/layouts/modals/modals-environmental-issues.html.haml
+++ b/source/layouts/modals/modals-environmental-issues.html.haml
@@ -5,7 +5,7 @@
 				%button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
 				%h4#climate-change-title.modal-title Climate Change
 			.modal-body.row
-				.col-md-4
+				.col-md-4.hidden-sm.hidden-xs
 					.thumbnail
 						%img{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
 				.col-md-8
@@ -18,7 +18,7 @@
 				%button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
 				%h4#invasive-title.modal-title Climate Change
 			.modal-body.row
-				.col-md-4
+				.col-md-4.hidden-sm.hidden-xs
 					.thumbnail
 						%img{:alt => "Invasive Species Icon", :src => "/images/invasivespecies-icon.png"}/
 				.col-md-8
@@ -31,7 +31,7 @@
 				%button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
 				%h4#science-two-zero-title.modal-title Science 2.0
 			.modal-body.row
-				.col-md-4
+				.col-md-4.hidden-sm.hidden-xs
 					.thumbnail
 						%img{:alt => "Invasive Species Icon", :src => "/images/science-2-0-icon.png"}/
 				.col-md-8
@@ -44,7 +44,7 @@
 				%button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
 				%h4#habitat-loss-title.modal-title Habitat Loss
 			.modal-body.row
-				.col-md-4
+				.col-md-4.hidden-sm.hidden-xs
 					.thumbnail
 						%img{:alt => "Habitat Loss Icon", :src => "/images/habitatloss-icon.png"}/
 				.col-md-8
@@ -57,7 +57,7 @@
 				%button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
 				%h4#biodiversity-title.modal-title Biodiversity
 			.modal-body.row
-				.col-md-4
+				.col-md-4.hidden-sm.hidden-xs
 					.thumbnail
 						%img{:alt => "Biodiversity Icon", :src => "/images/biodiversity-icon.png"}/
 				.col-md-8
