--- a/source/layouts/modals/modals-salamander.html.haml
+++ b/source/layouts/modals/modals-salamander.html.haml
@@ -6,7 +6,7 @@
         %h4#climate-change-title.modal-title Spotted Salamanders and Climate Change
       .modal-body.row
         .col-md-4
-          %img.img-rounded.img-responsive{:alt => "Climate changes affecting salamanders", :src => "/images/climate-modal.png"}/
+          %img.img-rounded.img-responsive.hidden-sm.hidden-xs{:alt => "Climate changes affecting salamanders", :src => "/images/climate-modal.png"}/
         .col-md-8
           %p Climate change is among the most serious threats that salamander populations face. Detrimental changes in climate such as increased temperatures, changing humidity levels, desertification, and droughts wreak havoc on salamanders. These animals are generally adapted to moist and cool climates and may require very specific conditions to thrive. Salamanders also live a ''double-life'' being associated with both aquatic and terrestrial habitats.
           %p Alterations to these optimal conditions result in salamander species dwindling. Changes in climate can also effect the forming and availability of critical habitat features such as change. They state that salamanders need cool moist places to survive. The world is getting hotter and drier; temperatures in Appalachia are predicted to rise by 3 to 11 degrees Fahrenheit over the next century. Salamanders have relatively long lifespans, but they do not mature or reproduce as quickly as some other aquatic animals. They may not be able to adapt to such radical change.
@@ -19,7 +19,7 @@
         %h4#habitat-loss-title.modal-title Spotted Salamanders and Habitat Loss
       .modal-body.row
         .col-md-4
-          %img.img-rounded.img-responsive{:alt => "Habitat loss affecting salamanders", :src => "/images/habitat-modal.png"}/
+          %img.img-rounded.img-responsive.hidden-sm.hidden-xs{:alt => "Habitat loss affecting salamanders", :src => "/images/habitat-modal.png"}/
         .col-md-8
           %p One of the biggest issues affecting salamanders is the loss of their natural habitat. Many areas that were once suitable for salamanders to live have now been destroyed for developmental construction and agriculture. Habitats of all kinds are being lost at an alarming rate. Wetlands are drained, forests are logged and cut down, and waterfronts are developed. Salamanders are literally losing their homes and they are losing them rapidly! Deforestation is particularly harmful to salamanders. When the amount of shade that covers the forest floor is reduced due to the removal of trees, the increased sunlight can allow for higher temperatures to reach the forest floor.
           %p This increases the threat of desiccation. The exposed sunlight can also rapidly dry up vernal pools and temporary flooded areas on the forest floor which are crucial breeding/birthing sites. The expansion of urban areas threatens the suitable habitats that still remain.
@@ -32,7 +32,7 @@
         %h4#biodiversity-title.modal-title Spotted Salamanders and Biodiversity
       .modal-body.row
         .col-md-4
-          %img.img-rounded.img-responsive{:alt => "Biodiversity and salamanders", :src => "/images/biodiversity-modal.png"}/
+          %img.img-rounded.img-responsive.hidden-sm.hidden-xs{:alt => "Biodiversity and salamanders", :src => "/images/biodiversity-modal.png"}/
         .col-md-8
           %p The decline in amphibian populations has been both well-documented and well publicized. However, this attention is largely focused on frogs and toads. Little mention is given to salamanders or the threats that they face. This is unfortunate as the decline in salamander species is extremely significant. Around half of all the world’s salamander species are listed as Threatened by the International Union for Conservation of Nature (IUCN).
           %p These species are all facing a high risk of extinction.
@@ -47,7 +47,7 @@
         %h4#invaisive-title.modal-title Spotted Salamanders and Invaisive Species
       .modal-body.row
         .col-md-4
-          %img.img-rounded.img-responsive{:alt => "Invasive species and salamanders", :src => "/images/invasive-modal.png"}/
+          %img.img-rounded.img-responsive.hidden-sm.hidden-xs{:alt => "Invasive species and salamanders", :src => "/images/invasive-modal.png"}/
         .col-md-8
           %p In contrast to the positive effect that round gobies have had on Lake Erie watersnakes, invasive species more typically have negative effects on native species. This is certainly true for European buckthorn, an invasive woody shrub that now occurs across a large portion of eastern North America and has displaced native plants, changed soil characteristics and patterns of nutrient cycling, and may be triggering declines of a variety of invertebrate and vertebrate species. European buckthorn is especially successful at invading flatwoods forest habitats.
           %p Such forests are underlain by a clay pan that resists water percolation, and are characterized by hydric soils and ephemeral ponds that are important amphibian breeding sites. The rarity of flatwoods forests has resulted in their recognition as globally imperiled and has made them the target of management and restoration efforts.
