--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -17,25 +17,25 @@
 					%li How can I get involved?
 	
 		.row
-			.col-md-12
+			.col-sm-12
 				%h3 Environmental Issues and Pioneer Valley
-			.col-md-3.col-md-offset-4
+			.col-sm-3.col-sm-offset-4
 				%a.thumbnail{"data-target" => "#climate-change-icon", "data-toggle" => "modal", :href => "#"}
-					%img.small-thumb{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
+					%img{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
 		.row
-			.col-md-3.col-md-offset-1
+			.col-sm-3.col-sm-offset-1
 				%a.thumbnail{"data-target" => "#invasive-icon", "data-toggle" => "modal", :href => "#"}
-					%img.small-thumb{:alt => "Invasive Species Icon", :src => "/images/invasivespecies-icon.png"}/
-			.col-md-3
+					%img{:alt => "Invasive Species Icon", :src => "/images/invasivespecies-icon.png"}/
+			.col-sm-3
 				%a.thumbnail{"data-target" => "#science-two-zero", "data-toggle" => "modal", :href => "#"}
-					%img.small-thumb{:alt => "Science 2.0", :src => "/images/science-2-0-icon.png"}/
-			.col-md-3
+					%img{:alt => "Science 2.0", :src => "/images/science-2-0-icon.png"}/
+			.col-sm-3
 				%a.thumbnail{"data-target" => "#habitat-loss-icon", "data-toggle" => "modal", :href => "#"}
-					%img.small-thumb{:alt => "Habitat Loss Icon", :src => "/images/habitatloss-icon.png"}/
+					%img{:alt => "Habitat Loss Icon", :src => "/images/habitatloss-icon.png"}/
 		.row
-			.col-md-3.col-md-offset-4
+			.col-sm-3.col-sm-offset-4
 				%a.thumbnail{"data-target" => "#biodiversity-icon", "data-toggle" => "modal", :href => "#"}
-					%img.small-thumb{:alt => "Biodiversity Icon", :src => "/images/biodiversity-icon.png"}/
+					%img{:alt => "Biodiversity Icon", :src => "/images/biodiversity-icon.png"}/
 
 
 
