--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -19,23 +19,24 @@
 		.row
 			.col-sm-12
 				%h3 Environmental Issues and Pioneer Valley
+				%p.text-muted Click icons for more info
 			.col-sm-3.col-sm-offset-4
 				%a.thumbnail{"data-target" => "#climate-change-icon", "data-toggle" => "modal", :href => "#"}
-					%img{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
+					%img.small-mobile{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
 		.row
 			.col-sm-3.col-sm-offset-1
 				%a.thumbnail{"data-target" => "#invasive-icon", "data-toggle" => "modal", :href => "#"}
-					%img{:alt => "Invasive Species Icon", :src => "/images/invasivespecies-icon.png"}/
+					%img.small-mobile{:alt => "Invasive Species Icon", :src => "/images/invasivespecies-icon.png"}/
 			.col-sm-3
 				%a.thumbnail{"data-target" => "#science-two-zero", "data-toggle" => "modal", :href => "#"}
-					%img{:alt => "Science 2.0", :src => "/images/science-2-0-icon.png"}/
+					%img.small-mobile{:alt => "Science 2.0", :src => "/images/science-2-0-icon.png"}/
 			.col-sm-3
 				%a.thumbnail{"data-target" => "#habitat-loss-icon", "data-toggle" => "modal", :href => "#"}
-					%img{:alt => "Habitat Loss Icon", :src => "/images/habitatloss-icon.png"}/
+					%img.small-mobile{:alt => "Habitat Loss Icon", :src => "/images/habitatloss-icon.png"}/
 		.row
 			.col-sm-3.col-sm-offset-4
 				%a.thumbnail{"data-target" => "#biodiversity-icon", "data-toggle" => "modal", :href => "#"}
-					%img{:alt => "Biodiversity Icon", :src => "/images/biodiversity-icon.png"}/
+					%img.small-mobile{:alt => "Biodiversity Icon", :src => "/images/biodiversity-icon.png"}/
 
 
 
