--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -20,9 +20,15 @@
 			.col-sm-12
 				%h3 Environmental Issues and Pioneer Valley
 				%p.text-muted Click icons for more info
-			.col-sm-3.col-sm-offset-4
+			.col-sm-3.col-sm-offset-1.hidden-xs
+				.thumbnail
+					%img.small-mobile.fifty-opacity{:alt => "Arrow", :src => "/images/arrow-right.png"}/
+			.col-sm-3
 				%a.thumbnail{"data-target" => "#climate-change-icon", "data-toggle" => "modal", :href => "#"}
 					%img.small-mobile{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
+			.col-sm-3.hidden-xs.down-arrow
+				.thumbnail
+					%img.small-mobile.fifty-opacity{:alt => "Arrow", :src => "/images/arrow-down.png"}/
 		.row
 			.col-sm-3.col-sm-offset-1
 				%a.thumbnail{"data-target" => "#invasive-icon", "data-toggle" => "modal", :href => "#"}
@@ -34,9 +40,15 @@
 				%a.thumbnail{"data-target" => "#habitat-loss-icon", "data-toggle" => "modal", :href => "#"}
 					%img.small-mobile{:alt => "Habitat Loss Icon", :src => "/images/habitatloss-icon.png"}/
 		.row
-			.col-sm-3.col-sm-offset-4
+			.col-sm-3.col-sm-offset-1.hidden-xs.down-arrow
+				.thumbnail
+					%img.small-mobile.fifty-opacity{:alt => "Arrow", :src => "/images/arrow-up.png"}/
+			.col-sm-3
 				%a.thumbnail{"data-target" => "#biodiversity-icon", "data-toggle" => "modal", :href => "#"}
 					%img.small-mobile{:alt => "Biodiversity Icon", :src => "/images/biodiversity-icon.png"}/
+			.col-sm-3.hidden-xs.down-arrow
+				.thumbnail
+					%img.small-mobile.fifty-opacity{:alt => "Arrow", :src => "/images/arrow-left.png"}/
 
 
 
