--- a/source/projects/index.html.haml
+++ b/source/projects/index.html.haml
@@ -2,29 +2,29 @@
   .row
     .page-header
       %h2 Projects
-  .row
+  .row.top-buffer
     .col-sm-4 
       .thumbnail
         %img.img-rounded{:alt => "Generic placeholder image", "data-src" => "holder.js/140x140", :src => "/images/salamander_watch_photo_icon_notext.png"}/
       %h2 Salamader Watch
       %p Salamander Watch is a collaboration between Hampshire College and The Hitchcock Center for the Environment in Amherst, MA. This project involves both the “Big Night” (counting of spotted salamanders during the early spring mating migration) and the Egg Mass Count (which happens 3-4 weeks after the Big Night, and is used to get a better estimate of the breeding success and overall health of the population).
-      %a.btn.btn-primary{:href => "/projects/salamander-watch", :role => "button"} Learn More
+      %a.btn.btn-primary.pull-left{:href => "/projects/salamander-watch", :role => "button"} Learn More
     .col-sm-4
       .thumbnail
         %img.img-rounded{:alt => "Generic placeholder image", "data-src" => "holder.js/140x140", :src => "/images/nest_watch_photo_icon_notext.png"}/
       %h2 Nest Watch
       %p Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
-      %a.btn.btn-primary{:href => "#", :role => "button"} Learn More
+      / %a.btn.btn-primary{:href => "#", :role => "button"} Learn More
     .col-sm-4
       .thumbnail
         %img.img-rounded{:alt => "Image of firefly","data-src" => "holder.js/140x140", :src => "/images/firefly.jpeg"}/
       %h2 Firefly Watch
       %p Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
-      %a.btn.btn-primary{:href => "#", :role => "button"} Learn More
-  .row
+      / %a.btn.btn-primary{:href => "#", :role => "button"} Learn More
+  .row.top-buffer
     .col-sm-4
       .thumbnail
-        %img.img-rounded{:src => "", :alt => "Monarch Butterflies"}/
+        %img.img-rounded{:src => "/images/monarch.jpg", :alt => "Monarch Butterflies"}/
       %h2 Monarch Butterflies
       %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias enim blanditiis sed sequi, ut labore non quaerat! Libero, earum fugiat a quam quo sed, suscipit incidunt ea, placeat consectetur itaque!
-      %a.btn.btn-primary{:href => "#", :role => "button"} Learn More
+      / %a.btn.btn-primary{:href => "#", :role => "button"} Learn More
