--- a/source/projects/salamander-watch/index.html.haml
+++ b/source/projects/salamander-watch/index.html.haml
@@ -15,35 +15,35 @@
         %a.thumbnail
           %img.img-rounded.img-responsive.hidden-sm.hidden-xs{:alt => "A spotted salamander", :src => "/images/spotted-basics.png"}/
   .row
-    .col-lg-12.col-md-12.col-sm-12
+    .col-xs-12
       %h3 Environmental issues affecting the spotted salamander
       %p.text-muted Click for more info
-    .col-lg-3.col-md-3.col-sm-3
+    .col-lg-3.col-md-3.col-xs-6
       %a.thumbnail{"data-target" => "#climate-change-icon", "data-toggle" => "modal", :href => "#"}
-        %img.small-thumb{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
-    .col-lg-3.col-md-3.col-sm-3
+        %img{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
+    .col-lg-3.col-md-3.col-xs-6
       %a.thumbnail{"data-target" => "#habitat-loss-icon", "data-toggle" => "modal", :href => "#"}
-        %img.small-thumb{:alt => "Habitat Loss Icon", :src => "/images/habitatloss-icon.png"}/
-    .col-lg-3.col-md-3.col-sm-3
+        %img{:alt => "Habitat Loss Icon", :src => "/images/habitatloss-icon.png"}/
+    .col-lg-3.col-md-3.col-xs-6
       %a.thumbnail{"data-target" => "#biodiversity-icon", "data-toggle" => "modal", :href => "#"}
-        %img.small-thumb{:alt => "Biodiversity Icon", :src => "/images/biodiversity-icon.png"}/
-    .col-lg-3.col-md-3.col-sm-3
+        %img{:alt => "Biodiversity Icon", :src => "/images/biodiversity-icon.png"}/
+    .col-lg-3.col-md-3.col-xs-6
       %a.thumbnail{"data-target" => "#invasive-icon", "data-toggle" => "modal", :href => "#"}
-        %img.small-thumb{:alt => "Invasive Species Icon", :src => "/images/invasivespecies-icon.png"}/
+        %img{:alt => "Invasive Species Icon", :src => "/images/invasivespecies-icon.png"}/
   .row
     .col-md-12
       %h3 Salamader Watch Background
       %p Salamander Watch is a collaboration between Hampshire College and The Hitchcock Center for the Environment in Amherst, MA.  This project involves both the “Big Night” (counting of spotted salamanders during the early spring mating migration) and the Egg Mass Count (which happens 3-4 weeks after the Big Night, and is used to get a better estimate of the breeding success and overall health of the population).
   .row
-    .col-sm-4
+    .col-lg-4.col-md-4.col-xs-12
       %a{:href => ""}
         .thumbnail
           %img.small-thumb{:src => "/images/register-for-excursion.png", :alt => "Launch an Investigation"}/
-    .col-sm-4
+    .col-lg-4.col-md-4.col-xs-12
       %a{:href => ""}
         .thumbnail
           %img.small-thumb{:src => "/images/launch-invest.png", :alt => "Launch an Investigation"}/    
-    .col-sm-4
+    .col-lg-4.col-md-4.col-xs-12
       %a{:href => ""}
         .thumbnail
           %img.small-thumb{:src => "/images/explore-data.png", :alt => "Explore the Data Set"}/
