--- a/source/about/index.html.haml
+++ b/source/about/index.html.haml
@@ -7,30 +7,29 @@
 	%section.row#hampshire-team
 		.page-header
 			%h2 Who we are
-		
 		.row
 			.col-md-12
 				%h3 Hampshire College Team
 		.row
 			.col-md-2
 				.thumbnail
-					%img{:src => "#", :alt => "Profile shot of Tim Zimmerman", :class => 'img-circle img-responsive'}
+					%img{:src => "/images/people/tim-profile.png", :alt => "Profile shot of Tim Zimmerman", :class => 'img-circle img-responsive'}
 			.col-md-10
 				%h4 Tim Zimmerman
 				%p I am a Visiting Assistant Professor of Cognition and Education in the School of Cognitive Sciences at Hampshire College [www.hampshire.edu].  As a learning sciences researcher, I focus on the learning of ocean and environmental science concepts and the design of learning tools that enhance such learning.  I study science learning across formal (classroom) and informal [informalscience.org] (outdoor, aquarium, museums, field trips, etc.) contexts, the use of science knowledge for environmental decision-making.  My work often involves the design and use of Internet-connected, wired and mobile devices as learning tools.
 
 		.row
 			.col-md-2
-				.thumbnail
-					%img{:src => "#", :alt => "Profile shot of Jonathan Gardner", :class => 'img-circle img-responsive'}
+				/ .thumbnail
+				/ 	%img{:src => "#", :alt => "Profile shot of Jonathan Gardner", :class => 'img-circle img-responsive'}
 			.col-md-10
 				%h4 Jonathan Gardner
 				%p I am a student at Hampshire College studying the ways in which digital technologies have changed and will continue to change how people learn and think about learning.  My specific interests include leveraging games and game design for learning purposes, the Internet’s potential for promoting scientific literacy, and the effects of a digital media saturated world on cognition.
 
 		.row
 			.col-md-2
-				.thumbnail
-					%img{:src => "#", :alt => "Profile shot of Chelsea LaValley", :class => 'img-circle img-responsive'}
+				/ .thumbnail
+				/ 	%img{:src => "#", :alt => "Profile shot of Chelsea LaValley", :class => 'img-circle img-responsive'}
 			.col-md-10
 				%h4 Chelsea LaValley
 				%p I am a Hampshire College student studying education, psychology and emotion studies. I specifically am interested in social-emotional learning in education. My concentration involves finding a correlation between SEL and academic achievement; to promote mental health services in the United States public education system. I am originally from Taos, New Mexico and will graduate from Hampshire in the spring of 2015! 
