--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -15,41 +15,63 @@
 				%a{"data-target" => "#how-can-i-get-involved", "data-toggle" => "modal", :href => "#"}
 					%li How can I get involved?
 	
-		.row
-			.col-sm-12
-				%h3 Environmental Issues and Pioneer Valley
-				%p.text-muted Click icons for more info
-			.col-sm-3.col-sm-offset-1.hidden-xs
-				.thumbnail
-					%img.small-mobile.fifty-opacity{:alt => "Arrow", :src => "/images/arrow-right.png"}/
-			.col-sm-3
-				%a.thumbnail{"data-target" => "#climate-change-icon", "data-toggle" => "modal", :href => "#"}
-					%img.small-mobile{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
-			.col-sm-3.hidden-xs.down-arrow
-				.thumbnail
-					%img.small-mobile.fifty-opacity{:alt => "Arrow", :src => "/images/arrow-down.png"}/
-		.row
-			.col-sm-3.col-sm-offset-1
-				%a.thumbnail{"data-target" => "#invasive-icon", "data-toggle" => "modal", :href => "#"}
-					%img.small-mobile{:alt => "Invasive Species Icon", :src => "/images/invasivespecies-icon.png"}/
-			.col-sm-3
-				%a.thumbnail{"data-target" => "#science-two-zero", "data-toggle" => "modal", :href => "#"}
-					%img.small-mobile{:alt => "Science 2.0", :src => "/images/science-2-0-icon.png"}/
-			.col-sm-3
-				%a.thumbnail{"data-target" => "#habitat-loss-icon", "data-toggle" => "modal", :href => "#"}
-					%img.small-mobile{:alt => "Habitat Loss Icon", :src => "/images/habitatloss-icon.png"}/
-		.row
-			.col-sm-3.col-sm-offset-1.hidden-xs.down-arrow
-				.thumbnail
-					%img.small-mobile.fifty-opacity{:alt => "Arrow", :src => "/images/arrow-up.png"}/
-			.col-sm-3
-				%a.thumbnail{"data-target" => "#biodiversity-icon", "data-toggle" => "modal", :href => "#"}
-					%img.small-mobile{:alt => "Biodiversity Icon", :src => "/images/biodiversity-icon.png"}/
-			.col-sm-3.hidden-xs.down-arrow
-				.thumbnail
-					%img.small-mobile.fifty-opacity{:alt => "Arrow", :src => "/images/arrow-left.png"}/
+		.section.hidden-xs
+			.row
+				.col-sm-12
+					%h3 Environmental Issues and Pioneer Valley
+					%p.text-muted Click icons for more info
+				.col-sm-3.col-sm-offset-1.hidden-xs
+					.thumbnail
+						%img.small-mobile.fifty-opacity{:alt => "Arrow", :src => "/images/arrow-right.png"}/
+				.col-sm-3
+					%a.thumbnail{"data-target" => "#climate-change-icon", "data-toggle" => "modal", :href => "#"}
+						%img.small-mobile{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
+				.col-sm-3.hidden-xs.down-arrow
+					.thumbnail
+						%img.small-mobile.fifty-opacity{:alt => "Arrow", :src => "/images/arrow-down.png"}/
+			.row
+				.col-sm-3.col-sm-offset-1
+					%a.thumbnail{"data-target" => "#invasive-icon", "data-toggle" => "modal", :href => "#"}
+						%img.small-mobile{:alt => "Invasive Species Icon", :src => "/images/invasivespecies-icon.png"}/
+				.col-sm-3
+					%a.thumbnail{"data-target" => "#science-two-zero", "data-toggle" => "modal", :href => "#"}
+						%img.small-mobile{:alt => "Science 2.0", :src => "/images/science-2-0-icon.png"}/
+				.col-sm-3
+					%a.thumbnail{"data-target" => "#habitat-loss-icon", "data-toggle" => "modal", :href => "#"}
+						%img.small-mobile{:alt => "Habitat Loss Icon", :src => "/images/habitatloss-icon.png"}/
+			.row
+				.col-sm-3.col-sm-offset-1.hidden-xs.down-arrow
+					.thumbnail
+						%img.small-mobile.fifty-opacity{:alt => "Arrow", :src => "/images/arrow-up.png"}/
+				.col-sm-3
+					%a.thumbnail{"data-target" => "#biodiversity-icon", "data-toggle" => "modal", :href => "#"}
+						%img.small-mobile{:alt => "Biodiversity Icon", :src => "/images/biodiversity-icon.png"}/
+				.col-sm-3.hidden-xs.down-arrow
+					.thumbnail
+						%img.small-mobile.fifty-opacity{:alt => "Arrow", :src => "/images/arrow-left.png"}/
 
-
+		.section.visible-xs
+			.row
+				.col-xs-12
+					%h4 Environmental Issues and Pioneer Valley
+					%p.text-muted Click icons for more info
+			.row
+				.col-xs-4
+					%a.thumbnail{"data-target" => "#climate-change-icon", "data-toggle" => "modal", :href => "#"}
+						%img.small-mobile{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
+				.col-xs-4
+					%a.thumbnail{"data-target" => "#science-two-zero", "data-toggle" => "modal", :href => "#"}
+						%img.small-mobile{:alt => "Science 2.0", :src => "/images/science-2-0-icon.png"}/
+				.col-xs-4
+					%a.thumbnail{"data-target" => "#invasive-icon", "data-toggle" => "modal", :href => "#"}
+						%img.small-mobile{:alt => "Invasive Species Icon", :src => "/images/invasivespecies-icon.png"}/
+			.row						
+				.col-xs-4.col-xs-offset-2
+					%a.thumbnail{"data-target" => "#habitat-loss-icon", "data-toggle" => "modal", :href => "#"}
+						%img.small-mobile{:alt => "Habitat Loss Icon", :src => "/images/habitatloss-icon.png"}/
+				.col-xs-4
+					%a.thumbnail{"data-target" => "#biodiversity-icon", "data-toggle" => "modal", :href => "#"}
+						%img.small-mobile{:alt => "Biodiversity Icon", :src => "/images/biodiversity-icon.png"}/ 
 
 	/ Modals --------------------------------------------------------------------
 	= partial 'layouts/modals/modals-index-faq'
