--- a/source/projects/index.html.haml
+++ b/source/projects/index.html.haml
@@ -13,14 +13,14 @@
     .col-sm-4.top-buffer
       .thumbnail
         %img.img-rounded{:alt => "Nest watch", "data-src" => "holder.js/140x140", :src => "/images/nest_watch_photo_icon_notext.png"}/
-      %h2 Nest Watch
-      %p Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+      %h2 Neighborhood Nestwatch
+      %p Modeled after the successful Smithsonian project of the same name in the Washington, D.C. area, Neighborhood Nestwatch seeks to engage ordinary citizens from Western Massachusetts in gathering data to discover precisely how urban sprawl impacts songbird populations. Assisted by trained scientists, participants learn how to locate nests in their backyards and count the eggs or recently-hatched birds within. In addition, the experts apply bands to adult birds so that the citizen scientists can track the birds' year-to-year returns to their nesting sites. The organizers of Neighborhood Nestwatch hope to compare a number of variables, including survival rates and site fidelity, between birds nesting in human-populated areas and those in forest or wildlands.
       / %a.btn.btn-primary{:href => "#", :role => "button"} Learn More
     .col-sm-4.top-buffer
       .thumbnail
         %img.img-rounded{:alt => "Image of firefly","data-src" => "holder.js/140x140", :src => "/images/firefly.jpeg"}/
       %h2 Firefly Watch
-      %p Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+      %p The Boston Museum of Science's Firefly Watch project seeks to learn more about the geographic distribution and activities of fireflies during the summer. It also seeks to discover more about the effects of man-made light and pesticides on fireflies. Participants go out into their backyards or nearby fields one night a week and fill out an observation sheet with information on the weather conditions that night and the behavior of the fireflies that they see.
       / %a.btn.btn-primary{:href => "#", :role => "button"} Learn More
   .row.top-buffer
     .col-sm-4.top-buffer
