added content to environmental issues, Science 2.0, and added Bud Burst and Leaf Drop projects

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -4,7 +4,7 @@
 			%ul.faq.list-unstyled
 				%a{"data-target" => "#what-is-pvcs", "data-toggle" => "modal", :href => "#"}
 					%li What is he Pioneer Valley Citizen Science Collaboratory?
-				%a{"data-target" => "#scienctists-work", "data-toggle" => "modal", :href => "#"}
+				%a{"data-target" => "#scientists-work", "data-toggle" => "modal", :href => "#"}
 					%li Where do Scientists Work?
 				%a{"data-target" => "#science-community", "data-toggle" => "modal", :href => "#"}
 					%li How does science affect me and my community?
