--- a/source/projects/index.html.haml
+++ b/source/projects/index.html.haml
@@ -25,7 +25,17 @@
   .row.top-buffer
     .col-sm-4.top-buffer
       .thumbnail
-        %img.img-rounded{:src => "/images/monarch.jpg", :alt => "Monarch Butterflies"}/
+        %img.img-rounded{:alt => "Monarch Butterflies","data-src" => "holder.js/140x140", :src => "/images/monarch.jpg"}/
       %h2 Monarch Butterflies
+      %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias enim blanditiis sed sequi, ut labore non quaerat! Libero, earum fugiat a quam quo sed, suscipit incidunt ea, placeat consectetur itaque!
+    .col-sm-4.top-buffer
+      .thumbnail
+        %img.img-rounded{:alt => "Image of buds on a tree","data-src" => "holder.js/140x140", :src => "/images/bud_burst_photo_icon_notext.png"}/
+      %h2 Bud Burst
+      %p The Bud Burst project is a national citizen science project that seeks to learn more about how plants respond to changes in climate locally, regionally, and nationally. Participants report on appearances of plants, either tracking the progress of a single plant over the course of a year or once.
+    .col-sm-4.top-buffer
+      .thumbnail
+        %img.img-rounded{:src => "/images/monarch.jpg", :alt => "Monarch Butterflies"}/
+      %h2 Leaf Drop
       %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias enim blanditiis sed sequi, ut labore non quaerat! Libero, earum fugiat a quam quo sed, suscipit incidunt ea, placeat consectetur itaque!
       / %a.btn.btn-primary{:href => "#", :role => "button"} Learn More
