--- a/source/layouts/modals/modals-index-faq.html.haml
+++ b/source/layouts/modals/modals-index-faq.html.haml
@@ -6,8 +6,9 @@
 				%h4#what-is-pvcs-title.modal-title What is Pioneer Citizen Science Collaboratory?
 			.modal-body.row
 				.col-md-12
+					%p PVCS is a tool to help people in the Pioneer Valley who are interested in science get involved in local projects and connect with other citizen scientists.
 
-#scienctists-work.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "scienctists-work", :role => "dialog", :tabindex => "-1"}
+#scientists-work.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "scientists-work", :role => "dialog", :tabindex => "-1"}
 	.modal-dialog
 		.modal-content
 			.modal-header
@@ -15,6 +16,7 @@
 				%h4#what-is-pvcs-title.modal-title Where do Scientists Work?
 			.modal-body.row
 				.col-md-12
+					%p Science is all around us. Some scientists do research while sipping lattes at their local coffee shop.
 
 #involved-in-science.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "involved-in-science", :role => "dialog", :tabindex => "-1"}
 	.modal-dialog
@@ -24,6 +26,7 @@
 				%h4#what-is-pvcs-title.modal-title Who Can Be Involved in Citizen Science?
 			.modal-body.row
 				.col-md-12
+					%p To be involved in scientific research you don't need a long white lab coat, giant microscopes, or a PHD in chemistry. In fact, you may not even need to leave your yard. Anyone can be involved in scientific research through citizen science.
 
 #science-community.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "science-community", :role => "dialog", :tabindex => "-1"}
 	.modal-dialog
@@ -33,6 +36,7 @@
 				%h4#what-is-pvcs-title.modal-title How Does Science Affect Me and My Community?
 			.modal-body.row
 				.col-md-12
+					%p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, accusamus, natus odit saepe suscipit voluptates.
 
 #what-is-citizen-science.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "what-is-citizen-science", :role => "dialog", :tabindex => "-1"}
 	.modal-dialog
@@ -42,6 +46,7 @@
 				%h4#what-is-pvcs-title.modal-title What is Citizen Science?
 			.modal-body.row
 				.col-md-12
+					%p Citizen Science is when citizens get involved in science.
 
 #how-can-i-get-involved.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "how-can-i-get-involved", :role => "dialog", :tabindex => "-1"}
 	.modal-dialog
@@ -51,7 +56,7 @@
 				%h4#what-is-pvcs-title.modal-title How Can I Get Involved?
 			.modal-body.row
 				.col-md-12
-					%p Citizen Science is when citizens get involved in science. JOIN PVCS today!
+					%p JOIN PVCS today!
 					%a.btn.btn-primary.pull-right{:href => "#{}"}
 						Join Now
 
