updated all page content that we have to date

--- a/source/layouts/modals/modals-environmental-issues.html.haml
+++ b/source/layouts/modals/modals-environmental-issues.html.haml
@@ -9,7 +9,14 @@
 					.thumbnail
 						%img{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
 				.col-md-8
-					%p Climate change is a global problem, but it is already starting to have tangible and direct effects on the Pioneer Valley. Among the projected effects of climate change are more frequent severe weather events, three of which occurred in 2011 alone: a series of tornados in the Springfield area on June 1<sup>st</sup>, flooding from Tropical Storm Irene on August 28-29<sup>th</sup>, and an early snowstorm on October 30<sup>th</sup>. A record-breaking heat wave also swept across the entire United States in July 2012.
+					%p
+						Climate change is a global problem, but it is already starting to have tangible and direct effects on the Pioneer Valley. Among the projected effects of climate change are more frequent severe weather events, three of which occurred in 2011 alone: a series of tornados in the Springfield area on June 1
+						%sup> st
+						, flooding from Tropical Storm Irene on August 28-29
+						%sup> th
+						, and an early snowstorm on October 30
+						%sup> th
+						&#46;&nbsp;A record-breaking heat wave also swept across the entire United States in July 2012.
 					%p In addition to an average temperature increase of 3-5 degrees F by 2050 at current greenhouse gas emission levels, it is expected that by the end of the century there will be anywhere from 30 to 60 days of extreme heat (over 90 degrees) in comparison with the 5 to 20 at current levels. Precipitation levels will also fluctuate much more extremely&mdash;while there are expected to be instances of extreme flooding once every 2-3 years, and a general increase in precipitation during winter months, Massachusetts will also have a 75&#37; increase in drought events which will last from 1-3 months.
 					%p All of these changes raise significant risks to other environmental factors. Temperature increases alone may force wildlife to migrate to the cooler places that they are better suited to survive, but increased flooding events may destroy habitats entirely. Flooding is particularly dangerous due to sewage disposal infrastructure's demonstrated vulnerabilities; during Tropical Storm Irene, raw sewage was discharged to the Connecticut River for several days when flood waters knocked the Greenfield wastewater facility offline.
 
@@ -74,7 +81,8 @@
 					.thumbnail
 						%img{:alt => "Habitat Loss Icon", :src => "/images/habitatloss-icon.png"}/
 				.col-md-8
-					%p Habitat loss is a major threat to biodiversity both in the Pioneer Valley and the wider world. Human activity is usually the cause of habitat loss, either directly through agriculture, land and water development, or indirectly through climate change (link to the climate change page) or introduction of invasive species (link to the invasive species page).
+					%p
+						Habitat loss is a major threat to biodiversity both in the Pioneer Valley and the wider world. Human activity is usually the cause of habitat loss, either directly through agriculture, land and water development, or indirectly through climate change (link to the climate change page) or introduction of invasive species (link to the invasive species page).
 					%p
 						The Connecticut River flows through the Pioneer Valley, and is home to a variety of aquatic species. However, human infrastructure in the form of dams and culverts has changed the natural flow regime and chemistry of the river, which has concerning implications for its ecology. There are 1,422 dams in MA and CT alone, which averages 1 dam per 6.6 km of river, in addition to 2,885 culverts in the Valley. The alterations to the river's flow regime restrict access to quality habitat for one or more life stages of various species, such as the ability for
 						%span{:title => "fish which spend most of their life in seawater, but lay their eggs in freshwater"} anadromous fish
