--- a/source/layouts/shared/nav.html.haml
+++ b/source/layouts/shared/nav.html.haml
@@ -16,7 +16,7 @@
           %li
             %a{:href => "/"} Home
           %li
-            %a{:href => "/projects/"}Projects
+            %a{:href => "/projects/"}Investigations
           %li
             %a{:href => "/about/"} About PVCS
           %li
