--- a/source/projects/index.html.haml
+++ b/source/projects/index.html.haml
@@ -2,7 +2,7 @@
   .row
     .col-sm-12
       .page-header
-        %h2 Projects
+        %h2 Investigations
   .row
     .col-sm-4.top-buffer
       .thumbnail
