--- a/source/stylesheets/typography.css.scss
+++ b/source/stylesheets/typography.css.scss
@@ -10,18 +10,30 @@ h2> a {
   color: #fff !important;
 }
 
-h1 a {
-  text-decoration: none;
-  color: #fff;
-}
-
+h1 a,
 h1 a:hover, a:focus {
-  color: #fff;
   text-decoration: none;
+  color: #fff;
 }
 
-@media (min-width: 767px) {
+h1 {
+	margin-top: 0;
+}
+
+@media (min-width: 1201px) {
 	h1 a {
 		font-size: 48px;
 	}
 }
+
+@media (max-width: 1200px) {
+	h1 a {
+		font-size: 36px;
+	}
+}
+
+// @media (min-width: 767px) {
+// 	h1 a {
+// 		font-size: 48px;
+// 	}
+// }
