made small changes to home page and base.css.scss; deleted projects folder

--- a/source/about/index.html.haml
+++ b/source/about/index.html.haml
@@ -18,6 +18,7 @@
 					%li What is citizen science?
 				%a{"data-target" => "#how-can-i-get-involved", "data-toggle" => "modal", :href => "#"}
 					%li How can I get involved?		
+	.row
 		.col-md-12
 			%p
 				Click
