added media queries - changes to layout at different device sizes

--- a/source/about/index.html.haml
+++ b/source/about/index.html.haml
@@ -3,23 +3,25 @@
 		.page-header
 			%h2 About PVCS
 		.col-md-12
-			%p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis rerum nobis vel nulla magnam, amet eligendi voluptatum velit, saepe est odit. Perferendis ad iure tempora odit dolore perspiciatis facere commodi!
-		.col-md-6
+			%p.lead Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis rerum nobis vel nulla magnam, amet eligendi voluptatum velit, saepe est odit. Perferendis ad iure tempora odit dolore perspiciatis facere commodi!
+		.col-md-12
 			%ul.faq.list-unstyled
 				%a{"data-target" => "#what-is-pvcs", "data-toggle" => "modal", :href => "#"}
-					%li What is the Pioneer Valley Citizen Science Collaboratory?
+					%li.col-lg-6 What is the Pioneer Valley Citizen Science Collaboratory?
 				%a{"data-target" => "#scientists-work", "data-toggle" => "modal", :href => "#"}
-					%li Where do Scientists Work?
+					%li.col-lg-6 Where do Scientists Work?
 				%a{"data-target" => "#science-community", "data-toggle" => "modal", :href => "#"}
-					%li How does science affect me and my community?
+					%li.col-lg-6 How does science affect me and my community?
 				%a{"data-target" => "#involved-in-science", "data-toggle" => "modal", :href => "#"}
-					%li Who can be involved in scienctific research?
+					%li.col-lg-6 Who can be involved in scienctific research?
 				%a{"data-target" => "#what-is-citizen-science", "data-toggle" => "modal", :href => "#"}
-					%li What is citizen science?
+					%li.col-lg-6 What is citizen science?
 				%a{"data-target" => "#how-can-i-get-involved", "data-toggle" => "modal", :href => "#"}
-					%li How can I get involved?		
+					%li.col-lg-6 How can I get involved?		
 	.row
 		.col-md-12
+			%br
+			%br
 			%p
 				Click
 				%a{:href => "/about-team/"} here
