--- a/source/layouts/shared/nav.html.haml
+++ b/source/layouts/shared/nav.html.haml
@@ -27,3 +27,5 @@
             .input-group-btn
               %button.btn.btn-default
                 %span.glyphicon.glyphicon-search
+
+/ .navbar-fixed-top
