--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -10,6 +10,7 @@
 
 // Page Specific Styles -----------------------------------------------------
 @import "index";
+@import "about";
 
 // Modals Specific Styles ---------------------------------------------------
 @import "modals";
