--- a/source/investigations/index.html.haml
+++ b/source/investigations/index.html.haml
@@ -9,7 +9,7 @@
         %img.img-rounded{:src => "/images/monarch.jpg", :alt => "Monarch Butterflies"}/
       %h2 Leaf Drop
       %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias enim blanditiis sed sequi, ut labore non quaerat! Libero, earum fugiat a quam quo sed, suscipit incidunt ea, placeat consectetur itaque!
-      / %a.btn.btn-primary{:href => "#", :role => "button"} Learn More
+      %a.btn.btn-primary{:href => "/investigations/leaf-drop", :role => "button"} Learn More
     .col-md-4.top-buffer
       .thumbnail
         %img.img-rounded{:alt => "Image of buds on a tree", :src => "/images/bud_burst_photo_icon_notext.png"}/
@@ -28,7 +28,7 @@
         %img.img-rounded{:alt => "Nest watch",  :src => "/images/nest_watch_photo_icon_notext.png"}/
       %h2 Neighborhood Nestwatch
       %p Modeled after the successful Smithsonian project of the same name in the Washington, D.C. area, Neighborhood Nestwatch seeks to engage ordinary citizens from Western Massachusetts in gathering data to discover precisely how urban sprawl impacts songbird populations. Assisted by trained scientists, participants learn how to locate nests in their backyards and count the eggs or recently-hatched birds within. In addition, the experts apply bands to adult birds so that the citizen scientists can track the birds' year-to-year returns to their nesting sites. The organizers of Neighborhood Nestwatch hope to compare a number of variables, including survival rates and site fidelity, between birds nesting in human-populated areas and those in forest or wildlands.
-      %a.btn.btn-primary{:href => "/investigations/nest-watch", :role => "button"} Learn More
+      / %a.btn.btn-primary{:href => "/investigations/nest-watch", :role => "button"} Learn More
     .col-md-4.top-buffer
       .thumbnail
         %img.img-rounded{:alt => "Image of firefly", :src => "/images/firefly.jpeg"}/
