--- a/source/layouts/shared/nav.html.haml
+++ b/source/layouts/shared/nav.html.haml
@@ -14,18 +14,27 @@
       #bs-example-navbar-collapse-1.collapse.navbar-collapse
         %ul.nav.navbar-nav
           %li
-            %a{:href => "/"} Home
+            %a.nav.nav-pills.navbar-btn{:href => "#login"} Members
           %li
-            %a{:href => "/investigations/"} Investigations
+            %a.nav.nav-pills.navbar-btn{:href => "#environment"} Environmental Issues in PV
           %li
-            %a{:href => "/about/"} About PVCS
+            %a.nav.nav-pills.navbar-btn{:href => "#projects"} Citizen Science Projects
           %li
-            %a{:href => "###"}Sign Up/Log In
-        %form.navbar-form
-          .search.input-group.pull-right
-            %input{:type => 'text', :class => 'form-control', :placeholder => 'Search PVCS'}
-            .input-group-btn
-              %button.btn.btn-default
-                %span.glyphicon.glyphicon-search
+            %a.nav.nav-pills.navbar-btn{:href => "#about"} About PVCS
+          / %li
+          /   %a{:href => "/"} Home
+          / %li
+          /   %a{:href => "/investigations/"} Investigations
+          / %li
+          /   %a{:href => "/about/"} About PVCS
+          / %li
+          /   %a{:href => "###"}Sign Up/Log In
+        / Do we want the 'Search PVCS' search bar??
+        / %form.navbar-form
+        /   .search.input-group.pull-right
+        /     %input{:type => 'text', :class => 'form-control', :placeholder => 'Search PVCS'}
+        /     .input-group-btn
+        /       %button.btn.btn-default
+        /         %span.glyphicon.glyphicon-search
 
 / .navbar-fixed-top
