--- a/source/stylesheets/base.css.scss
+++ b/source/stylesheets/base.css.scss
@@ -20,7 +20,7 @@ html, body {
 .jumbotron {
 	padding-top: 36;
 	padding-bottom: 70px;
-	background-image: url(../images/header_image.jpg);
+	background-image: url(../images/01home_background.jpg);
 	background-size: cover;
 }
 
