--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,5 +1,18 @@
 .container
 	.row
+		%ul
+			%li.col-xs-12.col-sm-6
+				%h2.users New Users
+				%button.btn.btn-info.btn-lg Join PVCS
+			%li.col-xs-12.col-sm-6
+				%h2.users Existing Users
+				%input{:type => "email"}
+					%input{:type => "password"}
+					%button.btn.btn-info.btn-lg Sign In
+
+
+
+
 		.section.hidden-xs
 			.row
 				.col-sm-12
@@ -35,28 +48,6 @@
 					.thumbnail
 						%img.small-mobile.fifty-opacity{:alt => "Arrow", :src => "/images/arrow-left.png"}/
 
-		.section.visible-xs
-			.row
-				.col-xs-12
-					%h4 Environmental Issues and Pioneer Valley
-					%p.text-muted Click icons for more info
-			.row
-				.col-xs-4
-					%a.thumbnail{"data-target" => "#climate-change-icon", "data-toggle" => "modal", :href => "#"}
-						%img.small-mobile{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
-				.col-xs-4
-					%a.thumbnail{"data-target" => "#science-two-zero", "data-toggle" => "modal", :href => "#"}
-						%img.small-mobile{:alt => "Science 2.0", :src => "/images/science-2-0-icon.png"}/
-				.col-xs-4
-					%a.thumbnail{"data-target" => "#invasive-icon", "data-toggle" => "modal", :href => "#"}
-						%img.small-mobile{:alt => "Invasive Species Icon", :src => "/images/invasivespecies-icon.png"}/
-			.row						
-				.col-xs-4.col-xs-offset-2
-					%a.thumbnail{"data-target" => "#habitat-loss-icon", "data-toggle" => "modal", :href => "#"}
-						%img.small-mobile{:alt => "Habitat Loss Icon", :src => "/images/habitatloss-icon.png"}/
-				.col-xs-4
-					%a.thumbnail{"data-target" => "#biodiversity-icon", "data-toggle" => "modal", :href => "#"}
-						%img.small-mobile{:alt => "Biodiversity Icon", :src => "/images/biodiversity-icon.png"}/ 
 
 	/ Modals --------------------------------------------------------------------
 	= partial 'layouts/modals/modals-environmental-issues'
