--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,46 @@
+body {
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+h1 > a,
+.nav-pills > li > a,
+#environment h2,
+#environment h3,
+#about h2,
+#about h4,
+#about p {
+  color: white;
+  font-weight: 300;
+}
+
+h2 {
+  margin: 50px 0;
+  font-size: 3em;
+  font-weight: 300;
+}
+
+.btn {
+  font-size: 1.2em;
+  background-color: dodgerblue;
+  border: 2px solid dodgerblue;
+  border-radius: 4px;
+  padding: 10px 25px;
+  background-image: none;
+  box-shadow: none;
+  padding: 10px 25px;
+}
+.btn:hover {
+  cursor: pointer;
+  background-color: white;
+  color: dodgerblue;
+  border-color: dodgerblue;
+}
+
 .jumbotron {
   background: url("../images/background_home.jpg") no-repeat;
   background-size: cover;
@@ -11,4 +54,58 @@
 #about {
   background: url("../images/background_about.jpg") no-repeat;
   background-size: cover;
+}
+
+h1 {
+  padding: 17% 0 2%;
+}
+h1 > a:hover {
+  color: white;
+}
+
+.nav-pills > li {
+  margin-right: 20px;
+  padding-bottom: 15%;
+}
+.nav-pills > li > a {
+  font-size: 1.2em;
+  background-color: white;
+  border: 2px solid white;
+  border-radius: 4px;
+  padding: 10px 25px;
+  background-image: none;
+  box-shadow: none;
+  background: none;
+}
+.nav-pills > li > a:hover {
+  cursor: pointer;
+  background-color: white;
+  color: white;
+  border-color: white;
+}
+.nav-pills > li > a:hover {
+  color: #0b0b0b;
+}
+
+.jumbotron {
+  margin-bottom: 0;
+}
+
+#login {
+  padding: 50px 0;
+}
+#login .col-sm-5 {
+  padding-right: 75px;
+}
+#login .col-sm-5:nth-child(2) {
+  border-left: 1px solid #0b0b0b;
+  padding-left: 75px;
+}
+#login input {
+  width: 75%;
+}
+
+.thumbnail {
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
 }
