--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -33,6 +33,17 @@ h3 {
 	font-weight: $font-weight--light;
 }
 
+a {
+
+}
+
+a.thumbnail:hover,
+a.thumbnail:focus,
+a.thumbnail.active {
+	border: none;
+	color: rgba(0, 0, 0, 0);
+}
+
 .btn {
 	@include button(dodgerblue);
 	padding: 10px 25px;
@@ -175,9 +186,26 @@ h1 {
 		&:hover {
 			color: $black;
 		}
+		margin-left: 50px;
 	}
 }
 
 #about-team {
-	background: #382d5d;
+	background: $darkslategray;
+	.panel {
+		margin-top: 20px;
+	}
+	h4 {
+		font-size: 1.3em;
+		margin-bottom: 15px;
+	}
+	p > a,
+	h4 > a {
+		color: lighten($darkslategray, 50);
+		@extend %transition;
+		&:hover {
+			color: lighten($darkslategray, 80);
+			@extend %transition;
+		}
+	}
 }
